--- a/podfile
+++ b/podfile
@@ -1,5 +1,9 @@
-platform :ios, '7.0'
+use_frameworks!
+platform :ios, ‘8.0’
 target 'socialSecurity' do
 pod 'AFNetworking', '~> 3.1.0'
 pod 'SDWebImage', '~> 4.1.0'
+pod 'ReactiveCocoa', '~> 6.0.1'
+pod 'MGJRouter', '~>0.9.0'
+pod 'MBProgressHUD', '~> 1.0.0'
 end
