--- a/podfile
+++ b/podfile
@@ -6,5 +6,7 @@ pod 'SDWebImage', '~> 4.1.0'
 pod 'ReactiveCocoa', '~> 6.0.1'
 pod 'MGJRouter', '~>0.9.0'
 pod 'MBProgressHUD', '~> 1.0.0'
+pod 'IQKeyboardManager'
+pod 'Masonry'
 
 end
